[project]
name = "dbus2mqtt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbus-next>=0.2.3",
    "jinja2>=3.1.6",
    "jinja2-ansible-filters>=1.3.2",
    "jsonargparse>=4.37.0",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "sdbus>=0.13.0",
]

[project.scripts]
dbus2mqtt = "dbus2mqtt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "types-pyyaml>=6.0.12.20241230",
    "taskipy>=1.14.1",
    "ruff>=0.11.2",
    "pyright>=1.1.396",
]

[tool.taskipy.tasks]
lint-ruff = "ruff check"
lint-pyright = "pyright"

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "basic"

# This does not work with dynamic dbus proxies
reportAttributeAccessIssue = false

[tool.ruff.lint]
extend-select = [

    # pycodestyle Error, Warnings
    "E",
    "W",

    # isort
    "I",

    # pep8-naming
    "N",

    # pyupgrade
    "UP"
]
ignore = [
    # line-too-long
    "E501"
]

[tool.ruff.lint.isort]
lines-between-types = 1
